# agentforge-core

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  agentforge.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agentforge_core/: app.py  config_loader.py  logging_utils.py  main.py  result_types.py
agentforge_core/bootstrap/: init_project.py
agentforge_core/cli/: cli.py
agents/: agent_registry.py
config/: models.yaml  runtime.yaml
dashboard/: package.json
distributed/: agent_worker.py  kafka_queue.py  task_consumer.py  task_producer.py
generated_project/: create api_api.py  main.py  output.py  sample_api.py  test_api.py
k8s/: agent-worker.yaml  kafka.yaml
memory/: memory_manager.py  repo_indexer.py
model_execution/: router.py
monitoring/: prometheus.yml
observability/: logging.py  metrics.py  telemetry.py  token_tracker.py
planning/: claude_planner.py
router/: model_router.py  skill_router.py
runtime/: task_dispatcher.py
scripts/: install.ps1  install.sh  push_next_step.sh  push_phase3_patch.sh  push_phase4_patch.sh
skills/: router.py
task_graph/: dag_engine.py  graph_builder.py  task_node.py  task_store.py
tests/: test_cli_smoke.py  test_config_loader.py  test_main_module.py  test_memory_manager.py  test_model_executor.py  test_provider_registry.py  test_router.py  test_skills.py  test_workflow_execution.py
workflow/: workflow_engine.py  workflow_executor.py
(+40 files in other folders)
